--- a/HostProfiles/HostProfiles.csproj
+++ b/HostProfiles/HostProfiles.csproj
@@ -130,6 +130,7 @@
     <Compile Include="MessageAction.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Content Include="Resources\Instance_5746.png" />
     <Content Include="Resources\Rename_6779_32.png" />
     <Content Include="Resources\WebForm%28ASPX%29_815_16x.png" />
     <None Include="Resources\Event_594_exp.png" />
