--- a/HostProfiles/HostProfiles.csproj
+++ b/HostProfiles/HostProfiles.csproj
@@ -103,6 +103,7 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Management" />
     <Reference Include="System.Data" />
@@ -133,6 +134,7 @@
     <Content Include="Resources\Instance_5746.png" />
     <Content Include="Resources\Rename_6779_32.png" />
     <Content Include="Resources\WebForm%28ASPX%29_815_16x.png" />
+    <None Include="app.config" />
     <None Include="Resources\Event_594_exp.png" />
     <Content Include="Resources\File-exclude_5820.png" />
     <Content Include="Resources\NewFile_6276_24.png" />
