More intuitive commando. Fixes #1

--- a/HostProfiles/HostProfiles.csproj
+++ b/HostProfiles/HostProfiles.csproj
@@ -129,6 +129,7 @@
     <Content Include="Resources\FlagThread-Flagged,NotHot,NotSelected_10392_16x.png" />
     <Content Include="Resources\Instance_5746.png" />
     <Content Include="Resources\Rename_6779_32.png" />
+    <Content Include="Resources\Save_6530.png" />
     <Content Include="Resources\WebForm%28ASPX%29_815_16x.png" />
     <None Include="app.config" />
     <None Include="Resources\Event_594_exp.png" />
