Show hosts as table. Fixes #3

--- a/HostProfiles/app.config
+++ b/HostProfiles/app.config
@@ -10,6 +10,9 @@
             <setting name="minimizeAtStatup" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="showAsTable" serializeAs="String">
+                <value>False</value>
+            </setting>
         </HostProfiles.Properties.Settings>
     </userSettings>
 </configuration>
