--- a/HostProfiles/Properties/Settings.settings
+++ b/HostProfiles/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="minimizeAtStatup" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="showAsTable" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
